Update azure-devops-CI.yaml for Azure Pipelines

--- a/azure-devops-CI.yaml
+++ b/azure-devops-CI.yaml
@@ -3,3 +3,6 @@ steps:
   inputs:
     command: 'custom'
     customCommand: 'build'
+- task: PublishPipelineArtifact@0
+  inputs:
+    targetPath: './dist'
