Update azure-devops-CI.yaml for Azure Pipelines

--- a/azure-devops-CI.yaml
+++ b/azure-devops-CI.yaml
@@ -2,7 +2,7 @@ steps:
 - task: Npm@1
   inputs:
     command: 'custom'
-    customCommand: 'build'
+    customCommand: 'run-script build'
 - task: PublishPipelineArtifact@0
   inputs:
     targetPath: './dist'
